--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
             <version>3.4.2</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>ShoppingCart</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
         </plugin>
 
 
